--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -1,4 +1,12 @@
 main {
+display: flex;
+flex-direction: column;
+
+
+.container-website {
+    display: flex;
+    padding: 7rem 15rem;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
-
-
