--- a/src/Components/Button/styles.scss
+++ b/src/Components/Button/styles.scss
@@ -1,19 +1,25 @@
 .btn-showcase {
   
   display: flex;
-  width: 7.5rem;
+  width: 8rem;
   height: 3rem;
   padding: 0.75rem 1.5rem;
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
 
-  color: #fff;
+  color: #000;
   border-radius: 0.3125rem;
   border: 1px solid var(--black);
-  background-color: var(--black);
+  background-color: white;
 
   font-size: 0.9rem;
   font-style: normal;
   font-weight: 400;
+  line-height: 150%;
+
+
+  &:hover {
+    background-color: rgb(233, 233, 233);
+  }
 }
