--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,3 +15,12 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
+
+.bg-black {
+  background: #000 !important;
+  color: #fff !important;
+
+  &:hover {
+    background-color: #252525 !important;
+  }
+}
