--- a/src/Components/FeaturedProducts/styles.scss
+++ b/src/Components/FeaturedProducts/styles.scss
@@ -3,12 +3,26 @@
   flex-direction: column;
   padding: 7rem 4rem;
 
+  h1 {
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+  }
+
   .title-featured {
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
 
     margin-bottom: 5rem;
+
+    p {
+      font-size: 1.125rem;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 150%;
+    }
     
     Button {
       width: 6.5rem;
