--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -9,4 +9,13 @@ flex-direction: column;
     flex-direction: column;
     
   }
+
+  .container-tagline {
+    display: flex;
+    width: 100%;
+    height: 27rem;
+    background-color: var(--black);
+    color: var(--white);
+  }
+
 }
