--- a/src/Components/Input/styles.scss
+++ b/src/Components/Input/styles.scss
@@ -1,5 +1,6 @@
 .container-input {
   display: flex;
+  flex-direction: column;
 
   input {
     display: flex;
@@ -10,5 +11,8 @@
     gap: 0.5rem;
     align-self: stretch;
     padding: 0.75rem;
+
+    border-radius: 0.3125rem;
+    border: 1px solid var(--black);
   }
 }
