--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -7,6 +7,11 @@ flex-direction: column;
     display: flex;
     padding: 7rem 15rem;
     flex-direction: column;
+
+    @media (max-width: 1300px) {
+      padding: 0rem 0rem;
+  }
+
     
   }
 
@@ -18,3 +23,4 @@ flex-direction: column;
     color: var(--white);
   }
 }
+
