--- a/src/Components/Contact/styles.scss
+++ b/src/Components/Contact/styles.scss
@@ -2,7 +2,7 @@
   display: flex;
   padding: 7rem 4rem;
 
-
+ 
   
   .contact {
     display: flex;
@@ -32,7 +32,38 @@
   flex-direction: column; 
   gap: 1.5rem;
   flex: 1 0 0;
+
+  p {
+    margin-bottom: -0.5rem;
+  }
+
+  input {
+    display: flex;
+    width: 100%;
+    height: 2.5rem;
+
+    gap: 0.5rem;
+    padding-left: 0.5rem;
+
+    border-radius: 0.3125rem;
+    border: 1px solid var(--black);
+  }
+
+  input[type="message"] {
+    height: 10rem;
+  }
+
   }
 
 
+  @media (max-width: 850px) {
+    flex-direction: column;
+    
+
+    .mensage {
+      margin-top: 2rem;
+    }
+    
+  }
 }   
+
