--- a/src/Components/NavBar/styles.scss
+++ b/src/Components/NavBar/styles.scss
@@ -58,10 +58,10 @@
     text-decoration: none;
   }
 
-  a:hover::after {
+  a:hover:after {
     content: "";
     width: 100%;
-    height: 1px;
+    height: 2px;
     background: var(--black);
     display: block;
   }
