--- a/src/Components/HeaderShowcase/styles.scss
+++ b/src/Components/HeaderShowcase/styles.scss
@@ -4,7 +4,6 @@
   padding: 0rem 4rem;
   margin-top: 5rem;
 
-
   .container-header{
     display: flex;
     gap: 5rem;
@@ -43,6 +42,11 @@
     display: flex;
     gap: 1rem;
   }
+  
+    #sofa-img {
+      width: 100%;
+      height: 100%;
+    }
 
   @media (max-width: 768px) {
     .container-header{
@@ -61,5 +65,6 @@
       gap: 3rem;
     }
 }
+
 }
 
