--- a/src/Components/Contact/styles.scss
+++ b/src/Components/Contact/styles.scss
@@ -55,15 +55,20 @@
 
   }
 
+  // media queries
 
   @media (max-width: 850px) {
     flex-direction: column;
-    
-
     .mensage {
       margin-top: 2rem;
     }
-    
+  }
+
+  @media (max-width: 500px) {
+    padding: 2rem 1.5rem;
+    .container-list {
+      width: 100%;
+    }
   }
 }   
 
