--- a/src/Components/FeaturedProducts/styles.scss
+++ b/src/Components/FeaturedProducts/styles.scss
@@ -53,4 +53,12 @@
           
         }
       }
+
+      @media (max-width: 500px) {
+ 
+        padding: 2rem 1.5rem;
+        .container-list {
+          width: 100%;
+        }
+      }
   }
