--- a/src/Components/HeaderShowcase/styles.scss
+++ b/src/Components/HeaderShowcase/styles.scss
@@ -48,6 +48,11 @@
       height: 100%;
     }
 
+
+
+    // media queries
+
+
   @media (max-width: 768px) {
     .container-header{
       flex-direction: column;
@@ -66,5 +71,8 @@
     }
 }
 
+@media (max-width: 500px) {
+  padding: 0rem 1.5rem;
+}
 }
 
