--- a/src/Components/NavBar/styles.scss
+++ b/src/Components/NavBar/styles.scss
@@ -1,74 +1,10 @@
-.container {
+.menu {
   display: flex;
-  width: 100%;
-  flex-direction: column;
-
-  
- &::after, &::before {
-      content: "";
-      width: 100%;
-      height: 1px;
-      background: var(--black);
-      display: block;
-  }
-
-.navbar-container {
-  display: flex;
-  width: 100%;
   justify-content: space-between;
-
-  padding: 0.5rem 4rem;
-
-  img {
-    display: flex;
-    padding: 0.5rem;
-    gap: 0.65613rem;
-  }
-}
-
-
-.navbar {
-  display: flex;
   align-items: center;
-  justify-content: flex-end;
-
-
-
-  input {
-    display: flex;
-    width: 7rem;
-    height: 2rem;
-    padding: 1.25rem;
-    border-radius: 0.3125rem;
-    border: 1px solid  var(--black);
-
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
-
-  ul {
-    display: flex;
-    list-style-type: none;
-
-    gap: 2rem;
-  }
-
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
-
-  a:hover:after {
-    content: "";
-    width: 100%;
-    height: 2px;
-    background: var(--black);
-    display: block;
-  }
-}
-
-.marketplace {
-  display: flex;
+  color: var(--black);
+  background-color: transparent;
+  padding: 0rem 4rem ; 
 
   button {
     width: 6rem;
@@ -85,27 +21,132 @@
     &:hover {
       background-color: var(--bg-button);
     }
-}
+  }
+
+  input {
+    display: flex;
+    width: 7rem;
+    height: 2rem;
+    padding: 1.25rem;
+    border-radius: 0.3125rem;
+    border: 1px solid  var(--black);
+
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
 }
 
-.notification {
+  .navbar-container {
+    display: flex;
+  }
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--black);
+}
+
+.menu-icon {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.bar {
+  width: 25px;
+  height: 3px;
+  background-color: var(--black);
+  margin: 3px 0;
+}
+
+.nav-list {
+  list-style: none;
   display: flex;
 
-  button {
+  ul {
+    margin-right: 20px;
+  }
+  
+   a {
+    text-decoration: none;
+
+    margin: 1rem;	
+    color: var(--black);
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.625rem;
+
+    &:hover {
+      color: var(--black);
+    }
+  }
+}
+
+
+@media (max-width: 1140px) {
+
+.menu {
+  padding: 0rem 3.5rem;
+  justify-content: center;
+}
+.menu-icon {
+  display: flex;
+}
+
+.nav-list {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  gap: 1rem;
+  top: 60px;
+  left: 0;
+  background-color: #fcfcfcea;
+  width: 100%;
+  text-align: center;
+}
+
+.navbar {
+  order: 1;
+
+  input {
     display: flex;
-    width: 6rem;
-    flex-direction: column;
+    width: 90%;
     align-items: center;
     justify-content: center;
+    margin-bottom: 1rem;
+  }
+}
+
+.nav-list.open {
+  display: flex;
+}
+}
+
+@media (max-width: 680px) {
+  .menu {
+
+    padding: 0rem 0rem;
+
+  }
+.image {
+  display: none;
+}
+
+  button {
+    width: 6rem;
     border: none;
     border-radius: 0.5rem;
     background-color: #fff;
-    cursor: pointer;
-  
-    &:hover {
-      background-color: var(--bg-button);
-    }
-}
+  }
 
-}
-}
+  input {
+    width: 7rem;
+    height: 2rem;
+    padding: 0rem;
+
+    margin-left: 0rem;
+    margin-right: 0rem;
+
+  }}
